--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,11 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
-.container{
-    height: 100vh;
+body{
     width: 100%;
-    background-image: url(../imagens/Prancheta.jpg);
-    background-position: center;
+    height: 100vh;
+    background: url(../imagens/Prancheta.jpg);
     background-size: cover;
-    padding-left: 5%;
-    padding-right: 5%;
-    position: relative;
 }
 header{
     width: 100%;
@@ -23,6 +19,8 @@ header{
     margin: auto;
     align-items: center;
     justify-content: space-around;
+    position: fixed;
+    z-index: 99;
 }
 header .logo{
     width: 60%;
@@ -40,28 +38,80 @@ header .menu ul li{
 header .menu ul li a{
     text-decoration: none;
     color: white;
-    transition: 0.5s;
+    transition: 0.5s ease;
     font-size: 20px;
 }
 header .menu ul li a:hover{
     color: #B6C7EB;
 }
 /* ----- MENU HOME ------*/
-.titulo{
-    margin-top: 170px;
-    margin-left: 70px;
+#home .container{
+    width: 100%;
+    height: 100vh;
+}
+#home .container .titulo{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
 .titulo h1{
     font-size: 78px;
     color: white;
+    margin-left: 200px;
 }
 .titulo p{
     color: #b0c0e2;
     font-size: 30px;
+    margin-left: 200px;
 }
 #prancheta-dois{
     height: 85%;
     position: absolute;
     bottom: 0;
     right: 80px;
+}
+/* ----- MENU ABOUT ------*/
+#about .container{
+    width: 100%;
+    height: 100vh;
+    background: url(../imagens/Prancheta.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: space-between;
+}
+#about .container .titulo{
+    width: 90%;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0 60px;  
+}
+#about .container .titulo h1{
+    font-size: 40px;
+    margin-left: 150px;
+    text-align: left;
+}
+#about .container .titulo h2{
+    font-size: 20px;
+    margin-left: 150px;
+    margin-top: 10px;
+    color: #a4b7e0;
+}
+#about .container .titulo p{
+    width: 500px;
+    margin-left: 150px;
+    margin-top: 20px;
+    color: #ffff;
+    font-size: 15px;
+    text-align: justify;
+}
+#about .container #img-dois{
+    width: 80%;
+    margin-right: 20px;
 }
