--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,89 @@ header .menu ul li a:hover{
     width: 80%;
     margin-right: 20px;
 }
+/*--- MENU PORTIFOLIO ---*/
+#portifolio .container{
+    width: 100%;
+    height: 100vh;
+    background: url(../imagens/Prancheta.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+#portifolio .container input[type=radio]{
+    display: none;
+}
+#portifolio .container .card{
+    position: absolute;
+    width: 40%;
+    height: 80%;
+    left: 0;
+    right: 0;
+    margin: 150px auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    transition: 0.4s ease;
+    cursor: pointer;
+}
+#portifolio .container .card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+#portifolio .container .card h1{
+    position: absolute;
+    z-index: 9;
+    color: #fff;
+    font-size: 6rem;
+    margin-top: 60px;
+}
+#portifolio .container .card p{
+    position: absolute;
+    z-index: 9;
+    width: 400px;
+    color: #fff;
+    margin-top: 200px;
+    text-align: justify;
+}
+#portifolio .container .card nav{
+    position: absolute;
+    z-index: 9;
+    width: 400px;
+    color: #fff;
+    margin-top: 200px;
+    text-align: justify;
+}
+#portifolio .container .card nav #sem-ponto{
+    text-decoration: none;
+    list-style: none;
+}
+#portifolio .container .cards{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+#item-1:checked ~ .cards #song-3,
+#item-2:checked ~ .cards #song-1,
+#item-3:checked ~ .cards #song-2{
+    transform: translateX(-40%) scale(0.8);
+    opacity: 0.4;
+    z-index: 0;
+}
+#item-1:checked ~ .cards #song-2,
+#item-2:checked ~ .cards #song-3,
+#item-3:checked ~ .cards #song-1{
+    transform: translateX(40%) scale(0.8);
+    opacity: 0.4;
+    z-index: 0;
+}
+#item-1:checked ~ .cards #song-1,
+#item-2:checked ~ .cards #song-2,
+#item-3:checked ~ .cards #song-3{
+    transform: translateX(0) scale(1);
+    opacity: 1;
+    z-index: 1;
+}
