--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
     height: 100vh;
     background: url(../imagens/Prancheta.jpg);
     background-size: cover;
+    overflow: hidden;
 }
 header{
     width: 100%;
@@ -49,6 +50,25 @@ header .menu ul li a:hover{
 #home .container{
     width: 100%;
     height: 100vh;
+}
+#home .container .icons{
+    width: 10%;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 60px;
+    position: fixed;
+    z-index: 999;
+}
+#home .container .icons ion-icon{
+    padding: 30px 0;
+    font-size: 2rem;
+    color: #fff;
+    transition: 0.5s ease;
+}
+#home .container .icons ion-icon:hover{
+    color: #156fc3;
 }
 #home .container .titulo{
     width: 100%;
