--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,12 @@ body{
     height: 100vh;
     background: url(../imagens/Prancheta.jpg);
     background-size: cover;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 header{
     width: 100%;
-    height: 15vh;
+    height: 80px;
     display: flex;
-    margin: auto;
     align-items: center;
     justify-content: space-around; /*alinhamento de container flexivel*/
     position: fixed;
@@ -76,7 +75,6 @@ header .menu ul li a:hover{
     display: flex;
     flex-direction: column;
     justify-content: center; /*complemento do flex-direction*/
-
 }
 .titulo h1{
     font-size: 78px;
@@ -265,4 +263,55 @@ header .menu ul li a:hover{
     font-size: 1.2rem;
     padding: 5px 0;
 }
-/*----ICONES-----*/
+
+/*------RESPONSIVIDADE-------*/
+@media screen and (max-width:960px){
+    /*home*/
+    header .logo img{
+        margin-left: 20px;
+    }
+    #home .container .icons {
+        margin-left: -20px;
+    }
+    #prancheta-dois{
+        height: 50%;
+    }
+    /*about*/
+    #about .container #img-dois{
+        width: 30%;
+    }
+}
+@media screen and (max-width:500px){
+    /*home*/
+    body{
+        background: #d1e2f8;
+    }
+    #home .container .titulo{
+        height: 65vh;
+        text-align: center;
+    }
+    #prancheta-dois{
+        height: 40%;
+        right: 0;
+        margin-right: -25%;      
+    }
+    /*about*/
+    #about .container{
+        background: #d1e2f8;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    /*experiencia*/
+    #about .container .titulo h1{
+        margin-left: -20px;
+    }
+    #about .container .titulo h2{
+        margin-left: -20px;
+        margin-right: 10px;
+    }
+    #about .container .titulo p{
+        margin-left: -20px;
+        text-overflow: hidden;
+    }
+}
